force-app/main/default/objects/Job_Sequence_Error__c/Job_Sequence_Error__c.object-meta.xml
<CustomObject>
    <description>This object will contain any errors that happened during a batch run</description>
    <label>Job Sequence Error</label>
    <nameField>
        <displayFormat>JSE{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Job Sequence Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Sequence Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>