force-app/main/default/objects/Job_Sequence_Error__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <inlineHelpText>What exception was found during the run?</inlineHelpText>
    <label>Exception</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>