force-app/main/default/objects/Job_Sequence_Error__c/fields/fml_DeleteMe__c.field-meta.xml
<CustomField>
    <fullName>fml_DeleteMe__c</fullName>
    <formula>(NOW()-CreatedDate)&gt;30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Me?</label>
    <type>Checkbox</type>
</CustomField>