force-app/main/default/objects/Job_Sequence_Error__c/fields/JobFrequency__c.field-meta.xml
<CustomField>
    <fullName>JobFrequency__c</fullName>
    <inlineHelpText>What is the frequency of the job being run</inlineHelpText>
    <label>Job Frequency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>