force-app/main/default/objects/Job_Sequence_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobFrequency__c</columns>
    <columns>JobName__c</columns>
    <columns>Exception__c</columns>
    <columns>BatchJobId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>